--- a/Assets/style.css
+++ b/Assets/style.css
@@ -20,6 +20,7 @@ a{
 h1{
     font-size: 250%;
 }
+
 .start , .highscores{
     max-width: 600px;
     margin: 100px auto 100px auto;
@@ -27,9 +28,16 @@ h1{
     font-size: medium;
 }
 
-/* .hide{
+.hide{
     display: none;
-} */
+} 
+
+#questions{
+    max-width: 600px;
+    margin: 100px auto 100px auto;
+    text-align: center;
+    font-size: medium; 
+}
 
 .button{
     color: white;
